# AI-RAG-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: app.py  chroma_client.py  embedder.py  ingest.py  query.py  voice_realtime.py
backend/embedders/: __init__.py  fallback_embedder.py  gemini_embedder.py  local_embedder.py
backend/interfaces/: __init__.py  embedder.py
backend/retrieval/: __init__.py  hybrid_retriever.py  keyword_retriever.py
backend/tests/: test_api.py  test_chroma.py  test_chunker.py  test_embedder.py  test_embedder_factory.py  test_embedder_gemini.py  test_fallback_embedder.py  test_gemini_embedder.py  test_ingestor.py  test_local_embedder.py
ui_flask/: app.py  requirements.txt
ui_flask/static/css/: style.css
ui_flask/static/js/: chat.js
ui_flask/templates/: base.html  chat.html  documents.html  index.html  upload.html  voice.html
ui_flask/utils/: api_client.py
