[project]
name = "rag-chatbot"
version = "1.0.0"
description = "Local-first RAG Chatbot with PDF ingestion, local embeddings, and Gemini LLM"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RAG Chatbot Contributors"}
]
keywords = ["rag", "chatbot", "pdf", "embeddings", "gemini", "chromadb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/your-username/Rag-chatbot"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.isort]
known-first-party = ["backend", "ui_flask"]
